--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,8 @@
+/* src/styles/global.css */
 @import "tailwindcss";
+
+@source "./src/**/*.{astro,html,js,jsx,md,mdx,svelte,ts,tsx,vue}";
+
 
 body {
   font-family: 'IBM Plex Mono', monospace;
